完善文档真实分片进度